# sparse

./: .gitignore  LICENSE  README.md  sparse.cabal
src/Data/: Sparse.hs
src/Data/Sparse/: Internal.hs
test/Data/: SparseSpec.hs
