Name:                   sparse
Version:                0.0.0
Author:                 Andrew Spott <andrew.spott@gmail.com>
Maintainer:             Andrew Spott <andrew.spott@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Sparse
  Other-Modules:        Data.Sparse.Internal
  Build-Depends:        base >= 4 && < 5
                      , vector>=0.10

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , vector>=0.10

Source-Repository head
  Type:                 git
--  Location:             
